--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".presentation.login.LoginActivity">
 
     <Button
         android:id="@+id/btn_Forgotten"
@@ -26,8 +26,8 @@
 
     <Button
         android:id="@+id/btn_Submit"
-        android:layout_width="129dp"
-        android:layout_height="49dp"
+        android:layout_width="126dp"
+        android:layout_height="78dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -101,8 +101,8 @@
 
     <TextView
         android:id="@+id/txt_Error"
-        android:layout_width="match_parent"
-        android:layout_height="62dp"
+        android:layout_width="390dp"
+        android:layout_height="188dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -118,8 +118,8 @@
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="266dp"
-        android:layout_height="49dp"
+        android:layout_width="261dp"
+        android:layout_height="78dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -131,6 +131,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.911" />
+        app:layout_constraintVertical_bias="0.912" />
 
 </android.support.constraint.ConstraintLayout>
